# LightyUpdater

./: .gitignore  Cargo.toml  README.md
crates/: Cargo.toml  lib.rs
crates/api/: Cargo.toml  README.md
crates/api/docs/: architecture.md  errors.md  file-serving.md  flow.md  handlers.md  resolution.md
crates/api/src/: errors.rs  lib.rs  models.rs
crates/api/src/handlers/: mod.rs  models.rs  rescan.rs  responses.rs  servers.rs  state.rs
crates/api/src/handlers/files/: cache.rs  disk.rs  handler.rs  mod.rs  models.rs  parser.rs  resolver.rs  validator.rs
crates/cache/: Cargo.toml  README.md
crates/cache/docs/: architecture.md  errors.md  file-diff.md  flow.md  manager.md  rescan.md
crates/cache/src/: cdn.rs  change_detector.rs  cloudflare.rs  errors.rs  file_cache.rs  file_diff.rs  file_manager.rs  lib.rs  manager.rs  models.rs  rescan_orchestrator.rs  server_path_cache.rs
crates/config/: Cargo.toml  README.md
crates/config/docs/: architecture.md  errors.md  hot-reload.md  migration.md
crates/config/src/: defaults.rs  errors.rs  lib.rs  loader.rs  migration.rs  models.rs
crates/events/: Cargo.toml  README.md
crates/events/docs/: architecture.md  event-types.md  formatting.md
crates/events/src/: bus.rs  lib.rs  models.rs
crates/filesystem/: Cargo.toml  README.md
crates/filesystem/docs/: architecture.md  operations.md  server-structure.md
crates/filesystem/src/: lib.rs  models.rs  operations.rs
crates/models/: Cargo.toml  README.md
crates/models/docs/: architecture.md  url-mapping.md  version-builder.md
crates/models/src/: lib.rs
crates/scanner/: Cargo.toml  README.md
crates/scanner/docs/: architecture.md  errors.md  flow.md  jar-scanner.md
crates/scanner/src/: assets.rs  client.rs  errors.rs  lib.rs  libraries.rs  models.rs  mods.rs  natives.rs  server.rs
crates/scanner/src/utils/: jar.rs  mod.rs
crates/storage/: Cargo.toml  README.md
crates/storage/docs/: architecture.md  errors.md  flow.md  local.md  s3.md
crates/storage/src/: backend.rs  errors.rs  lib.rs  local.rs  s3.rs
crates/utils/: Cargo.toml  README.md
crates/utils/docs/: checksums.md  errors.md  path.md
crates/utils/src/: checksum.rs  errors.rs  lib.rs  path.rs
crates/watcher/: Cargo.toml  README.md
crates/watcher/docs/: architecture.md  change-detection.md  errors.md  flow.md  hot-reload.md
crates/watcher/src/: config.rs  errors.rs  lib.rs  models.rs
src/: main.rs
src/bootstrap/: config.rs  logging.rs  mod.rs  router.rs  server.rs
