[package]
name = "lighty-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal crates
lighty-cache = { path = "../cache" }
lighty-models = { path = "../models" }
lighty-config = { path = "../config" }
lighty-filesystem = { path = "../filesystem" }

# Async runtime
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"
chrono = { workspace = true }

# File type detection
mime_guess = "2.0"

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
